fixed future date format and the position with spacing of the 5 blue card boxes

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -12,9 +12,9 @@
     padding-left: 3%;
 } */
 
-.form-control{
+/* .form-control {
     width: 100%!important;
-}
+} */
 /* .col-9 {
     border: 1px black solid;
 }
